[tool.poetry]
name = "synthetic-time-series"
version = "0.1.0"
description = ""
authors = ["Carlos Gavidia-Calderon <cgavidia-calderon@turing.ac.uk>"]
readme = "README.md"
packages = [{include = "synthetic_time_series"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
